--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "lint": "eslint .",
   "preview": "vite preview",
   "build": "vite build",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-}
-,
+  "predeploy": "cross-env VITE_GITHUB_PAGES=true npm run build",
+  "deploy": "gh-pages -d dist",
+  "vercel-deploy": "vercel --prod"
+},
   "dependencies": {
     "aos": "^2.3.4",
     "react": "^19.1.0",
@@ -23,6 +23,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
